# koy

./: .gitignore  deploy.sh  fix_db.sh  fix_nginx.sh  menu_seed.sql  nginx-koya.conf  nginx-ratelimit.conf  run_seed.sh  test_system.py
backend/: .env.example  koya.db  pyproject.toml  requirements.txt  seed.py
backend/app/: auth.py  config.py  database.py  main.py  models.py
backend/app/routes/: auth.py  menu.py  orders.py  reservations.py  sections.py  settings.py  staff.py
public/: admin.html  index.html  mock-menu.json  reserve.html  script.js  service-worker.js  styles.css
